# demonstration

./: .gitignore  公司相关规范.xmind  收楼计划.xmind  计划.xmind
advertisement-campaign/: README.md
android-media-study-library-server/: pom.xml
ansible/: README.md  demo-check-if-file-exists.yml  demo-check-if-port-open.yml  demo-cli-specify-hosts.yml  demo-find.yml  demo-retry.yml
authing.cn/: README.md  pom.xml
awaitility-demo/: README.md  pom.xml
aws/: README.md
bootstrap/: README.md  pom.xml
brainstorm/: README.md
c-or-cpp/: c++编程.xmind  c-or-cpp.sln  c-or-cpp.vcxproj  demo_srand_and_rand.c
captcha/: README.md
commons-compress/: pom.xml
commons-io/: pom.xml
commons-lang/: pom.xml
curatorframework/: pom.xml
demo-12123/: README.md
demo-adobe/: 信息.md
demo-agora/: 信息.md
demo-ai/: README.md
demo-ali-payment/: pom.xml
demo-aliyun/: README.md  ROS.md  oss服务.md  云服务器.md  应用实时监控服务.md  阿里云存储服务.md  阿里云容器服务.md  阿里云容器镜像服务.md  阿里云帐号信息.md  阿里云日志服务.md  阿里云网络.md
demo-android/: README.md  android-studio.md  gradle.md  模拟器.md
demo-angularjs/: README.md
demo-ansi-escape-code/: README.md  demo-ansi-escaple-code.sh  demo-basic-usage.py  demo-cursor-navigation.py  demo-rich-text.py  demo-write-a-command-line.py
demo-axure/: README.md  demo-action-set-size.rp  demo-dock-to-right.rp  demo-timer.rp
demo-benchmark/: CPU测试.md  IO测试.md  README.md  gatling.md  基准测试工具.md  应用或组件基准测试.md  测试工具安装.md  监控方案.md
demo-benchmark-jmh/: pom.xml
demo-c++/: .gitignore  README.md  c-cpp-语法.md  demo-fmtlib.cpp  demo-glib-g_printerr.c  demo-glib-mainloop.c  demo-glib.c  demo-glibc.c  demo-int-pointer.c  demo-lib-json-cjson.c  demo-lib-json-jsonc.c  demo-libsoup-wsclient.c  demo-libsoup-wsserver.c  demo-perror.c  demo-struct.c  demo-syntax-typedef.c  demo_file_read_and_write.c  gdb.md  gdbdebug.c  helloworld.c  (+8 more)
demo-c++/demo-c++/demo-linux-pthread/: CMakeLists.txt  main.cpp
demo-c++/demo-cmake-lib/lib/: CMakeLists.txt
demo-make/demo-cmake-helloworld/demo-executable/: CMakeLists.txt
demo-make/demo-cmake-helloworld/demo-executable/src/: CMakeLists.txt
(+8311 files in other folders)
